--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
         "symfony/routing": "^5.1",
         "twig/twig": "^3.0"
     },
+    "autoload": {
+        "psr-4": {"Spuyt\\": "src/"}
+    },
     "scripts": {
         "phpunit": "php vendor/bin/phpunit -c phpunit.xml --colors=always",
         "security-checker": "php vendor/bin/security-checker security:check || true",
